src/styles/_ide.scss
.IDE {
  display: flex;
  flex-direction: column;

  .row {
    margin-right: 0px;
    margin-left: 0px;
  }

  .ide-content-parent {
    height: 85vh;
  }

  .Editor {
    height: 100%;
    display: flex;
    flex-direction: column;
    .editor-control {
      flex: initial;
    }
    .editor-react-ace {
      flex: 1;
      // to align with the repl output cards
      margin-top: 0.3rem;
    }
  }

  .Repl {
    height: 100%;
    overflow-y: auto;
    margin-top: 0.3rem;

    .pt-card {
      background-color: $cadet-color-2;
      padding: 0.4rem;
      padding-left: 0.6rem;
      margin: 0.5rem;
      margin-top: 0rem;

      code {
        background-color: transparent;
        color: inherit;
        padding: 0px;
        white-space: pre;
      }
    }

    .repl-react-ace {
      margin: 0.5rem;
      margin-top: 0rem;
    }
  }

  .react-ace {
    background-color: $cadet-color-2;
    .ace_gutter {
      background: $cadet-color-3;
      color: rgb(128,145,160);
    }
  }
}

